# BMI-Calculator

./: CMakeLists.txt  application.c  main.c  window.c
